Changed js and css paths to be relative.

--- a/asteroids.html
+++ b/asteroids.html
@@ -1,7 +1,7 @@
 <html>
-	<head><link rel="stylesheet" type="text/css" href="file:///C:\Users\Ryan\web\asteroids.css"></head>
+	<head><link rel="stylesheet" type="text/css" href="asteroids.css"></head>
 	<body>
 		<canvas id="canvas"></canvas>
-		<script src="file:///C:\Users\Ryan\web\asteroids.js"></script>
+		<script src="asteroids.js"></script>
 	</body>
 </html>
