split some of the objects into their own files.  created folders for js and css

--- a/asteroids.html
+++ b/asteroids.html
@@ -1,7 +1,11 @@
 <html>
-	<head><link rel="stylesheet" type="text/css" href="asteroids.css"></head>
+	<head><link rel="stylesheet" type="text/css" href="assets/css/asteroids.css"></head>
 	<body>
 		<canvas id="canvas"></canvas>
-		<script src="asteroids.js"></script>
+		<script src="assets/js/asteroid.js"></script>
+		<script src="assets/js/bullet.js"></script>
+		<script src="assets/js/coordinate.js"></script>
+		<script src="assets/js/rocketship.js"></script>
+		<script src="assets/js/game.js"></script>
 	</body>
 </html>
