added a circle class for asteroid and bullet to inherit from.  it has an x, y, and radius and a draw function

--- a/asteroids.html
+++ b/asteroids.html
@@ -2,6 +2,7 @@
 	<head><link rel="stylesheet" type="text/css" href="assets/css/asteroids.css"></head>
 	<body>
 		<canvas id="canvas"></canvas>
+		<script src="assets/js/circle.js"></script>
 		<script src="assets/js/asteroid.js"></script>
 		<script src="assets/js/bullet.js"></script>
 		<script src="assets/js/coordinate.js"></script>
